umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0369_N1CCCC2C1C3NCCCC3C4N_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_chemaxon
category: basic_chemaxon
basic_opensmiles:
  success: true
  summary:
    sum_formula: C18N4
    atom_count: 22
    bond_count: 26
